--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       gap: 10px;
     }
     button {
+      width: 200px;
+      height: 200px;
       background-color: #fff;
       border: 2px solid #000;
       color: #000;
